update recent changes

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,6 +6,11 @@ docstrings = JavaDoc
 align.tokens = ["%", "%%", {code = "=>", owner = "Case"}]
 align.openParenCallSite = false
 align.openParenDefnSite = false
+align.arrowEnumeratorGenerator = true
+align = most
+
 continuationIndent.callSite = 2
 continuationIndent.defnSite = 2
 danglingParentheses = true
+rewrite.rules = [SortModifiers]
+
