--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,4 @@
+version = 2.5.1
 project.git = true
 
 maxColumn = 120
@@ -13,4 +14,3 @@ continuationIndent.callSite = 2
 continuationIndent.defnSite = 2
 danglingParentheses = true
 rewrite.rules = [SortModifiers]
-
